Fixed alignment

--- a/software/owh/client/app/css/custom-styles.css
+++ b/software/owh/client/app/css/custom-styles.css
@@ -1491,7 +1491,7 @@ ul.custom-nav-tabs {
 
 .yrbs_search_links .advanced-search-toggle {
 	display: inline-block;
-	padding: 5px 10px;
+	padding: 5px 0px;
 	font-weight: bold;
 	font-size:14px;
 }
